add contact form through formbuilder

--- a/about.html
+++ b/about.html
@@ -32,29 +32,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-md page-text">
-                    <h2 class="uppercase about-header text=center">About Milly</h2>
+                    <h2 class="uppercase about-header text-center">About Milly</h2>
                     <br>
                     <p>
-                        Milly Armstrong Clark is a Yorkshire comedian born and raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly people,
+                        Milly Armstrong Clark is a Yorkshire comedian raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly people,
                         which scientists believe may be a defect caused by the over excessive consumption of Yorkshire Tea and pickled gherkins since birth.         
                         <br><br>
                         Milly got into stand up in 2019 as a way to subsidise her Yorkshire Tea addiction. Her style has been described as loveably quirky and accidentally intellectual.
                         Pulling anecdotes from her mildly ridiculous life, Milly weaves a hilarious narrative with observations of her encounters - from motorway sex shops to 3am cake baking sessions - and a splash of the delightfully macabre to offer a unique and side-splitting performance.
                         Her first gig was in York, shortly after she was wrongfully accused of telling a small woman to go back to the circus, so every gig since has been a massive improvement by simply not being shouted at in a queue.
                         <br><br>
-                        When Milly isn't up on stage, she hosts a weekly podcast <a class="link-plug" href="podcast.html">Tea with the Morale Queen</a> in which she sits down with a new guest each week to share positive
+                        When Milly isn't up on stage, she hosts a podcast <a class="link-plug" href="podcast.html">Tea with the Morale Queen</a> in which she sits down with a new guest to share positive
                         and morale-boosting stories over a good cuppa. Her guests come from all walks of life, and are guaranteed to put a smile on your face!
-                        <br><br>
-                        Ever the Jack of all trades, Milly is also writing a sitcom based on the goings on at a seaside campsite (keep an eye out for it on TV), and is writing a part-autobiographical, 
-                        part-wild musings book entitled "Tales from under the Carrot Tree", which is due for release in all your local bookstores just as soon as she finishes writing the damn thing.
                         <br><br>
                         Outside of her comedic and creative pursuits, Milly is passionate about animals and wildlife. Milly attended the University of Cumbria, where she studied a degree in Wildlife and Media. 
                         Her work history includes time with the Yorkshire Wildlife Trust, two veterinary surgeries, a Birds of Prey centre, and the Cats Protection. 
                         Milly has been involved in various fundraising projects to help a great number of wildlife and animal organisations, and is always keen to find ways to merge her passions together.
                         <br><br>
-                        Milly lives with her own band of waifs and strays, including husband Rob, a golden retriever called Poppy (also known as Div dog), two cats named Xena (Xenie Bidniss) and Kya (Scripps), and a bearded dragon called Ziggard Christopher Stark Junior (Ziggy).
+                        Milly lives with her own band of waifs and strays, including husband Rob, a golden retriever called Poppy (also known as Div dog), two cats named Xena (Xenie Bidniss) and Kya (Scripps of Scripps and Scrapps fame), and a bearded dragon called Ziggard Christopher Stark Junior (Ziggy).
                         You can keep up to date with all things Milly-related by following her on <a class="link-plug" target="_blank" href="https://www.instagram.com/millcomedy/"> Instagram,</a> 
-                        <a class="link-plug" target="_blank" href="https://www.facebook.com"> Facebook,</a> <a class="link-plug" target="_blank" href="https://www.twitter.com">Twitter</a>
                         or <a class="link-plug" target="_blank" href="https://www.youtube.com/channel/UCm8_k81-p_cEimTHmhDOB-w">YouTube.</a>
                     </p>
                 </div>
