--- a/news.html
+++ b/news.html
@@ -43,7 +43,7 @@
                 Milly was the guest on the latest episode of the Confidence For Breakfast podcast, hosted by fellow comedian and confidence queen, Mel Judson.
                 Milly shares her experience of body image, overcoming fears and insecurities and how to feel good about yourself!
                 <br>
-                You can listen to the episode with Milly, or binge all the episodes by clicking <a class="link-plug" href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank"> here. </a>
+                You can listen to the episode with Milly, or binge all the episodes <a class="link-plug" href="https://open.spotify.com/episode/2mhASYlpHZ4IpoMgu268ex?si=s5oLAM9VSdKwmTCH4UGozA" target="_blank"> here. </a>
                 </p>
             </div>
             <div class="col-lg md-4 align-self-center">
@@ -63,7 +63,7 @@
                 With an outstanding line up and the two best compares in the business running the night, everyone who came had an absolute blast of an evening.
                 <br>
                 It was an amazing experience being back up on stage after so many months without live comedy, so Milly went all out with a brand new set that went down a treat.
-                The set was recorded, so you can catch it in full by clicking on the Stand Up tab, or clicking <a class="link-plug" href="standup.html"> here. </a>
+                The set was recorded, so you can catch it in full <a class="link-plug" href="standup.html"> here. </a>
                 </p>
             </div>
             <div class="col-lg align-self-center">
@@ -80,7 +80,7 @@
                 <p>
                 Milly guest starred on the hit new online panel show "Popped Culture" hosted by Eddie French with team captains Chris Lumb and Tom King and special guest Hannah Warman.
                 <br>
-                The episode is available to watch on YouTube via this <a class="link-plug" target="_blank" href="https://www.youtube.com/watch?v=lAvvAn2BcFs"> link. </a>
+                The episode is available to watch on YouTube <a class="link-plug" target="_blank" href="https://www.youtube.com/watch?v=lAvvAn2BcFs"> here. </a>
                 </p>
             </div>
             <div class="col-lg align-self-center">
@@ -98,7 +98,7 @@
                 Hold onto your hats, Milly Armstrong Clark is taking on the world of podcasting! 
                 Join Morale Queen and professional Tea Drinker Milly as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!
                 <br>
-                You can listen to the episode, or any future episodes by clicking <a class="link-plug" href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank"> here. </a>
+                You can listen to the episode, or any future episodes <a class="link-plug" href="https://anchor.fm/millyarmstrongclark#:~:text=Join%20Morale%20Queen%20and%20professional,pie%20to%20brighten%20your%20day!" target="_blank"> here. </a>
                 </p>
             </div>
             <div class="col-lg align-self-center">
