--- a/podcast.html
+++ b/podcast.html
@@ -34,7 +34,7 @@
                     <div>
                     <h2 class="uppercase text-center">Tea with the Morale Queen</h2>
                         <br>
-                        <p>Join Morale Queen and professional Tea Drinker Milly Armstrong-Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
+                        <p class="mb-0">Join Morale Queen and professional Tea Drinker Milly Armstrong Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                         <br>
                             <h3 class="sub-uppercase">Latest Episode</h3>
                             <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102" width="350"></iframe>
@@ -101,7 +101,7 @@
                             <!--Credit to w3docs https://www.w3docs.com/snippets/html/how-to-create-an-html-button-that-acts-like-a-link.html-->
 
                                 <form action="https://anchor.fm/millyarmstrongclark/support" method="get" target="_blank">
-                                    <button type="submit" class="btn btn-submit"> Support </button>
+                                    <button type="submit" class="btn btn-submit mt-1 mb-1"> Support </button>
                                 </form>
                             </div>
                             <br>                 
