--- a/contact.html
+++ b/contact.html
@@ -33,23 +33,10 @@
     <div class="row">
         <div class="col alt-page-text text-center">
             <h2 class="uppercase">Contact Milly</h2>
-            <br>
-            <p>
-            For all work and business enquiries, please use the contact form below!
-            </p>
             <div class="center-form">
-                <form>
-                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required/>
-                    <br>
-                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email Address" required/>
-                    <br>
-                    <textarea rows="7" name="message" id="message" class="form-control" placeholder="Message" required></textarea>
-                    <div class="form-row text-center">
-                        <div class="col">
-                            <button type="submit" class="btn btn-secondary">Send Message</button>
-                        </div>
-                    </div>
-                </form>
+                <!-- form.123formbuilder.com script begins here -->
+                <script type="text/javascript" defer src="https://form.123formbuilder.com/embed/5915000.js" data-role="form" data-default-width="650px"></script>
+                <!-- form.123formbuilder.com script ends here -->
             </div>
         <div id="img-row" class="row">
             <div class="col">
