add fixes to sizing

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
-                    <br>
-                    <h1 class="uppercase mt-5">Milly Armstrong Clark</h1>
+                    <h1 class="uppercase">Milly Armstrong Clark</h1>
                     <h2 class="uppercase">Comedian</h2>
                     <h2 class="uppercase">Morale Queen</h2>
                     <h2 class="uppercase">Tea Drinker</h2>
