--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <div class="col-md page-text">
                     <h2 class="uppercase about-header text-center">About Milly</h2>
                     <br>
-                    <p>
+                    <p class="pb-5">
                         Milly Armstrong Clark is a Yorkshire comedian raised in the quaint town of Malton. Throughout her early years, she loved nothing more than to film herself pretending to be elderly people,
                         which scientists believe may be a defect caused by the over excessive consumption of Yorkshire Tea and pickled gherkins since birth.         
                         <br><br>
