--- a/podcast.html
+++ b/podcast.html
@@ -33,9 +33,7 @@
                 <div class="col-md-8 page-text">
                     <div>
                     <h2 class="uppercase text-center">Tea with the Morale Queen</h2>
-                        <br>
-                        <p class="mb-0">Join Morale Queen and professional Tea Drinker Milly Armstrong Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
-                        <br>
+                        <p class="mb-2">Join Morale Queen and professional Tea Drinker Milly Armstrong Clark as she interviews guests over a hot mug of tea with a big slice of morale pie to brighten your day!</p>
                             <h3 class="sub-uppercase">Latest Episode</h3>
                             <iframe src="https://anchor.fm/millyarmstrongclark/embed" height="102" width="350"></iframe>
                     </div>
@@ -97,12 +95,7 @@
                             <br>
                             <div>
                                 <h3 class="sub-uppercase">Support the Podcast</h3>
-
-                            <!--Credit to w3docs https://www.w3docs.com/snippets/html/how-to-create-an-html-button-that-acts-like-a-link.html-->
-
-                                <form action="https://anchor.fm/millyarmstrongclark/support" method="get" target="_blank">
-                                    <button type="submit" class="btn btn-submit mt-1 mb-1"> Support </button>
-                                </form>
+                                <a href="https://anchor.fm/millyarmstrongclark/support" class="btn mt-1 mb-1" target="_blank">Support</a>
                             </div>
                             <br>                 
                         </div>
