--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6">
                     <h1 class="uppercase">Milly Armstrong Clark</h1>
-                    <h2 class="uppercase">Comedian</h2>
-                    <h2 class="uppercase">Morale Queen</h2>
-                    <h2 class="uppercase">Tea Drinker</h2>
+                    <h2 class="uppercase sub-head-main">Comedian <br> Morale Queen <br> Tea Drinker</h2>
+                    <h2 class="uppercase sub-head-mobile">Comedian - Morale Queen - Tea Drinker</h2>
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <figure class="swap-on-hover">
